--- a/atelier/p1/templates/events/listStatic.html
+++ b/atelier/p1/templates/events/listStatic.html
@@ -1,5 +1,7 @@
 <ul> 
     {% for e in events  %} 
+    <li> {{e.title}}</li>
     <li> {{e.description}}</li>
+    <li> {{e.state}}</li>
     {% endfor %}
 </ul>
