forms + login auth

--- a/atelier/p1/templates/events/list.html
+++ b/atelier/p1/templates/events/list.html
@@ -1,18 +1,36 @@
 
+
 {% extends 'base.html' %}
 {% block content %}
 
-<h1> event list </h1>
-<ul> 
-    {% for e in events  %} 
-    <li> 
-        <a href="{%  url 'event_details' e.id  %}">{{e.title}}</a>
-    
-    </li>
-    <li> {{e.description}}</li>
-    <li> {{e.state}}</li>
-    <li> <img src="{{e.image.url }}" alt="event_img" width="50% " /> </li>
-    {% endfor %}
-</ul>
+
+
+  
+      <div>
+        <div class="d-flex m-5 flex-wrap">
+          {% for e in events %}
+        
+          <div class="card mx-5" style="width: 18rem">
+            <img src="{{ e.image.url }}" class="card-img-top" alt="..." />
+        
+            <div class="card-body">
+              <h5 class="card-title">{{e.title}}</h5>
+        
+              <p class="card-text">{{e.description}}</p>
+        
+              <a href="{% url 'event_datails' e.id %}" class="btn btn-primary"
+                >View Details</a
+              >
+             
+              <p class="card-text mt-2">Category : {{e.category}}</p>
+            </div>
+            <div class="card-footer">
+              <small class="text-muted">{{e.evt_date}}</small>
+            </div>
+          </div>
+        
+          {% endfor %}
+        </div>
+      </div>
 {% endblock content %}
 
