--- a/atelier/p1/templates/header.html
+++ b/atelier/p1/templates/header.html
@@ -1,18 +1,52 @@
-{% load static%}
-<nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" href=""><img src={% static 'img/Logo.png' %}/></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
+
+{% load static %}
+<nav class="navbar navbar-expand-lg navbar-light" style="background-color: #E8E8E8;">
+  <div class="container-fluid">
+      <a class="navbar-brand" href="#">
+          <img
+              src="{% static 'img/logo.png' %}"
+              alt=""
+              class="img-fluid w-50"
+          />
+      </a>
+      <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+      >
+          <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="  {% url 'list_event_view' %}">Events </a>
-          </li>
-          
-        </ul>
-      
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                  <a class="nav-link active" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="{% url 'list_event_view' %}"
+                      >Events</a
+                  >
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="{% url 'add_event' %}"
+                      >Create Event </a
+                  >
+              </li>
+          </ul>
+          <span class="navbar-text">
+            {{ greeting }} {{ user.username|default:"Visitor" }}
+            {% if user.is_authenticated %}
+            <a href="{% url 'logout' %}" class="link-light"> <i class="bi bi-person-dash"></i> Log Out</a>
+            {% else %}
+            <a href="" class="link-info"><i class="bi bi-box-arrow-in-right"></i> Log In</a>
+            <a href="" class="link-light"><i class="bi bi-person-add"></i> Sign Up</a>
+            {% endif %}
+            </span>
       </div>
-    </div>
-  </nav>
+  </div>
+</nav>
+
+</div>
