delete ,add Participations +rest workshop

--- a/atelier/p1/templates/events/list.html
+++ b/atelier/p1/templates/events/list.html
@@ -17,9 +17,13 @@
               <h5 class="card-title">{{e.title}}</h5>
         
               <p class="card-text">{{e.description}}</p>
+              <p class="card-text">{{e.nbe_participant}}</p>
         
               <a href="{% url 'event_datails' e.id %}" class="btn btn-primary"
                 >View Details</a
+              >
+              <a href="{% url 'delete_event_view' e.id %}" class="btn btn-danger"
+                >Delete</a
               >
              
               <p class="card-text mt-2">Category : {{e.category}}</p>
