--- a/atelier/p1/templates/users/form.html
+++ b/atelier/p1/templates/users/form.html
@@ -4,6 +4,6 @@
 <form method="POST" action="">
        {% csrf_token %}
     {{form.as_p}}
-<input type="submit" value="Login" class="btn btn-primary" />
+<input type="submit" value="Save" class="btn btn-primary" />
 </form>
 {% endblock %}
